"feat: spring security configuration v2"